--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:max.zvyagin7@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My LinkedIn" target="_blank" href="#"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="www.github.com/maxzvyagin"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/max-zvyagin"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://www.github.com/maxzvyagin"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
