--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,15 +4,15 @@
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
+      <h2>Computer Science</h2>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-swift-plain-wordmark colored"></i>
+      <i class="iconify-inline" data-icon="simple-icons:pytorch"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
     </div>
     <div class="tech">
-      <h2>Code</h2>
+      <h2>Biology</h2>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
