--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,9 +7,9 @@
       <h2>Computer Science</h2>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-swift-plain-wordmark colored"></i>
-      <i class="iconify-inline" data-icon="simple-icons:pytorch"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="iconify-inline" data-icon="cib:pytorch"></i>
+      <p>Highly experienced in Python. Coursework experience with Swift and C. Well-versed with PyTorch and Tensorflow
+      with focus on computer vision and computational biology applications. </p>
     </div>
     <div class="tech">
       <h2>Biology</h2>
