--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,11 +6,12 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <h3> SnapCoin iOS Application </h3>
+<!--    <ul>-->
+<!--&lt;!&ndash;      <li> <Automated Coin Segmentation></li>&ndash;&gt;-->
+<!--&lt;!&ndash;      <li> <Counting ></li>&ndash;&gt;-->
+<!--    </ul>-->
+    <p> Automated real-time segmentation of American coins on a flat surface. Logging and counting capabilites. Inspired by desire to increase efficiency in retail management tasks. Final project in iOS development course at UChicago, Winter 2019.</p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
