--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,6 +8,7 @@
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-swift-plain-wordmark colored"></i>
       <i class="iconify-inline" data-icon="cib:pytorch"></i>
+      <i class="iconify-inline" data-icon="logos:tensorflow"></i>
       <p>Highly experienced in Python. Coursework experience with Swift and C. Well-versed with PyTorch and Tensorflow
       with focus on computer vision and computational biology applications. </p>
     </div>
