--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,23 +9,22 @@
       <i class="devicon-swift-plain-wordmark colored"></i>
       <i class="iconify-inline" data-icon="cib:pytorch"></i>
       <i class="iconify-inline" data-icon="logos:tensorflow"></i>
+      <p>Master's of Science in Computer Science. </p>
       <p>Highly experienced in Python. Coursework experience with Swift and C. Well-versed with PyTorch and Tensorflow
       with focus on computer vision and computational biology applications. </p>
     </div>
     <div class="tech">
       <h2>Biology</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="iconify-inline" data-icon="noto:brain"></i>
+      <i class="iconify-inline" data-icon="noto:dna"></i>
+      <i class="iconify-inline" data-icon="carbon:chart-line-data"></i>
+      <p>Wet lab experience in fundamental neuroscience techniques. Course work experience in fundamental bioinformatics and signal analysis. </p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
+      <h2>Communication/Management</h2>
       <i class="devicon-git-plain"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>3.5 years of retail management experience in retail setting including</p>
     </div>
 </div>
