--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,11 +20,11 @@
       <i class="iconify-inline" data-icon="carbon:chart-line-data"></i>
       <p>Wet lab experience in fundamental neuroscience techniques. Course work experience in fundamental bioinformatics and signal analysis. </p>
     </div>
-    <div class="tech">
-      <h2>Communication/Management</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>3.5 years of retail management experience in retail setting including</p>
-    </div>
+<!--    <div class="tech">-->
+<!--      <h2>Communication/Management</h2>-->
+<!--      <i class="devicon-git-plain"></i>-->
+<!--      <i class="devicon-gulp-plain colored"></i>-->
+<!--      <i class="devicon-atom-original-wordmark"></i>-->
+<!--      <p>3.5 years of retail management experience in retail setting including</p>-->
+<!--    </div>-->
 </div>
