--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
       <i class="iconify-inline" data-icon="noto:brain"></i>
       <i class="iconify-inline" data-icon="noto:dna"></i>
       <i class="iconify-inline" data-icon="carbon:chart-line-data"></i>
-      <p>Wet lab experience in fundamental neuroscience techniques. Course work experience in fundamental bioinformatics and signal analysis. </p>
+      <p>Wet lab experience in fundamental biology and neuroscience techniques including single cell recording and fluorescent microscopy. Course work experience in fundamental bioinformatics and signal analysis. </p>
     </div>
 <!--    <div class="tech">-->
 <!--      <h2>Communication/Management</h2>-->
