--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
       <i class="iconify-inline" data-icon="logos:tensorflow"></i>
       <p>Master's of Science in Computer Science. </p>
       <p>Highly experienced in Python. Coursework experience with Swift and C. Well-versed with PyTorch and Tensorflow
-      with focus on computer vision and computational biology applications. </p>
+      with focus on computer vision and computational biology applications. Experience in GPU-based computing through Argonne computing facilities. </p>
     </div>
     <div class="tech">
       <h2>Biology</h2>
