--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
       <i class="devicon-swift-plain-wordmark colored"></i>
       <i class="iconify-inline" data-icon="cib:pytorch"></i>
       <i class="iconify-inline" data-icon="logos:tensorflow"></i>
-      <p>Master's of Science in Computer Science. </p>
+      <p>Master's of Science in Computer Science - University of Chicago 2020 </p>
       <p>Highly experienced in Python. Coursework experience with Swift and C. Well-versed with PyTorch and Tensorflow
       with focus on computer vision and computational biology applications. Experience in GPU-based computing through Argonne computing facilities. </p>
     </div>
@@ -18,6 +18,7 @@
       <i class="iconify-inline" data-icon="noto:brain"></i>
       <i class="iconify-inline" data-icon="noto:dna"></i>
       <i class="iconify-inline" data-icon="carbon:chart-line-data"></i>
+      <p>Bachelor's of Art in Neuroscience - University of Chicago 2020</p>
       <p>Wet lab experience in fundamental biology and neuroscience techniques including single cell recording and fluorescent microscopy. Course work experience in fundamental bioinformatics and signal analysis. </p>
     </div>
 <!--    <div class="tech">-->
