--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,11 +20,26 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <h3> CrossedWires Python Package </h3>
+<!--    <ul>-->
+<!--      <li> Featured Skills</li>-->
+<!--    </ul>-->
+    <p> Library created to explore the divergence between semantically equivalent models in PyTorch and TensorFlow and their relationship to the hyperparameter space using three different computer vision models and the CIFAR10 dataset. Open dataset with call for community contributions
+    to improve model equivalence across deep learning frameworks. </p>
+    <a class="project-link" href="https://arxiv.org/abs/2108.12768">Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Ephemeral Stream Segmentation </h3>
+<!--    <ul>-->
+<!--&lt;!&ndash;      <li> <Automated Coin Segmentation></li>&ndash;&gt;-->
+<!--&lt;!&ndash;      <li> <Counting ></li>&ndash;&gt;-->
+<!--    </ul>-->
+    <p> Application of sementic segmentation workflow to GIS dataset to capture ephemeral streams. </p>
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
