--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/ephemeral_streams_example.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Ephemeral Stream Segmentation </h3>
@@ -39,7 +39,7 @@
 <!--&lt;!&ndash;      <li> <Automated Coin Segmentation></li>&ndash;&gt;-->
 <!--&lt;!&ndash;      <li> <Counting ></li>&ndash;&gt;-->
 <!--    </ul>-->
-    <p> Application of sementic segmentation workflow to GIS dataset to capture ephemeral streams. </p>
-    <a class="project-link" href="#">Check it out</a>
+    <p> Application of sementic segmentation workflow to GIS dataset to capture ephemeral streams. Current iteration achieves 80% accuracy on test dataset and captures global features but model requires further development to improve IOU values.</p>
+    <a class="project-link" href="https://github.com/maxzvyagin/ephemeral_streams_code">Check it out</a>
   </div>
 </div>
