--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/neurips_figure2_screenshot.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> CrossedWires Python Package </h3>
