--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/ephemeral_streams_example.png" | prepend: site.baseurl }}" />
+    <img alt="sample_segmentation" src="{{ "/assets/img/ephemeral_streams_example.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Ephemeral Stream Segmentation </h3>
@@ -18,7 +18,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/neurips_figure2_screenshot.png" | prepend: site.baseurl }}" />
+    <img alt="crossedwires_fig2" src="{{ "/assets/img/neurips_figure2_screenshot.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> CrossedWires Python Package </h3>
@@ -32,7 +32,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/snapcoin.jpg" | prepend: site.baseurl }}" />
+    <img alt="snapcoin" src="{{ "/assets/img/snapcoin.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> SnapCoin iOS Application </h3>
