--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -32,7 +32,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="snapcoin" src="{{ "/assets/img/snapcoin.png" | prepend: site.baseurl }}" />
+    <img alt="snapcoin" src="{{ "/assets/img/snapcoin_rectangle.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> SnapCoin iOS Application </h3>
