--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,6 +18,7 @@
       <i class="iconify-inline" data-icon="noto:brain"></i>
       <i class="iconify-inline" data-icon="noto:dna"></i>
       <i class="iconify-inline" data-icon="carbon:chart-line-data"></i>
+      <i class="iconify-inline" data-icon="noto:microscope"></i>
       <p>Bachelor's of Art in Neuroscience - University of Chicago 2020</p>
       <p>Wet lab experience in fundamental biology and neuroscience techniques including single cell recording and fluorescent microscopy. Course work experience in fundamental bioinformatics and signal analysis. </p>
     </div>
