--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,8 @@
 <!--&lt;!&ndash;      <li> <Automated Coin Segmentation></li>&ndash;&gt;-->
 <!--&lt;!&ndash;      <li> <Counting ></li>&ndash;&gt;-->
 <!--    </ul>-->
-    <p> Application of sementic segmentation workflow to GIS dataset to capture ephemeral streams. Current iteration achieves 80% accuracy on test dataset and captures global features but model requires further development to improve IOU values.</p>
+    <p> Application of sementic segmentation workflow to GIS dataset to capture ephemeral streams. Current iteration achieves 80% accuracy on test dataset and captures global features but model requires further development to improve IOU values.
+    Test set segmentation shown here.</p>
     <a class="project-link" href="https://github.com/maxzvyagin/ephemeral_streams_code">Check it out</a>
   </div>
 </div>
