--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -26,7 +26,7 @@
 <!--    <ul>-->
 <!--      <li> Featured Skills</li>-->
 <!--    </ul>-->
-    <p> Library created to explore the divergence between semantically equivalent models in PyTorch and TensorFlow and their relationship to the hyperparameter space using three different computer vision models and the CIFAR10 dataset. Open dataset with call for community contributions
+    <p> Library created to explore the semantic divergence between syntactically equivalent models in PyTorch and TensorFlow and their relationship to the hyperparameter space using three different computer vision models and the CIFAR10 dataset. Open dataset with call for community contributions
     to improve model equivalence across deep learning frameworks. </p>
     <a class="project-link" href="https://arxiv.org/abs/2108.12768">Check it out</a>
   </div>
