--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -36,12 +36,12 @@
     <img alt="snapcoin" src="{{ "/assets/img/snapcoin_rectangle.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> SnapCoin iOS Application </h3>
+    <h3> Snap Coin - Smart Counter iOS Application </h3>
 <!--    <ul>-->
 <!--&lt;!&ndash;      <li> <Automated Coin Segmentation></li>&ndash;&gt;-->
 <!--&lt;!&ndash;      <li> <Counting ></li>&ndash;&gt;-->
 <!--    </ul>-->
     <p> Automated real-time segmentation of American coins on a flat surface. Logging and counting capabilites. Inspired by desire to increase efficiency in retail management tasks. Final project in iOS development course at UChicago, Winter 2019.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <a class="project-link" href="https://apps.apple.com/us/app/snap-coin-smart-counter/id1503862387">Check it out</a>
   </div>
 </div>
