--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -41,7 +41,7 @@
 <!--&lt;!&ndash;      <li> <Automated Coin Segmentation></li>&ndash;&gt;-->
 <!--&lt;!&ndash;      <li> <Counting ></li>&ndash;&gt;-->
 <!--    </ul>-->
-    <p> Automated real-time segmentation of American coins on a flat surface. Logging and counting capabilites. Inspired by desire to increase efficiency in retail management tasks. Final project in iOS development course at UChicago, Winter 2019.</p>
+    <p> Automated real-time machine learning driven object detection of American coins on a flat surface. Logging and counting capabilities. Inspired by desire to increase efficiency in retail management tasks. Final project in iOS development course at UChicago, Winter 2019.</p>
     <a class="project-link" href="https://apps.apple.com/us/app/snap-coin-smart-counter/id1503862387">Check it out</a>
   </div>
 </div>
